lab-solution/advanced/manifests/08-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-front
  namespace: voting-app
  labels:
    app: azure-vote-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: azure-vote-front
  template:
    metadata:
      labels:
        app: azure-vote-front
    spec:
      containers:
        - name: azure-vote-front
          image: neilpeterson/azure-vote-front:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
