lab-solution/advanced/manifests/07-redis-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: voting-app
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
