lab-solution/advanced/manifests/09-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
  namespace: voting-app
spec:
  type: NodePort
  selector:
    app: azure-vote-front
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
